# soaptest

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/soaptest/: __init__.py  __main__.py
src/soaptest/client/: __init__.py  client.py  introspect.py
tests/: conftest.py  test_discovery.py
